----> Added Room DB with basic functionality and Movie detail page.
----> tried to cover maximum corner case like keyboard hide, text clear, user msg management

----> tried a better look and feel to user in simplest way....

----> databinding concepts

----> tried use of minimum 3rd party library

----> Everything is in Kotlin only

Commit And Pushed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
     <string name="app_name">InterviewDemo</string>
     <string name="search_movie_title">Search Movie By Name</string>
     <string name="search_title">Movie Name</string>
+    <string name="type">Type: </string>
+    <string name="title">Name: </string>
+    <string name="year">Year: </string>
+    <string name="imdbid">ImDBID: </string>
+    <string name="no_data">Movie not found! </string>
     <string name="not_empty">Field can not be empty</string>
 </resources>
